--- a/app/views/home/log.html.erb
+++ b/app/views/home/log.html.erb
@@ -15,26 +15,12 @@
 <% end %> 
 <div class="col-md-12">
   <%= form_for(@match, url: log_path) do |f| %>
-    <% if @match.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@match.errors.count, "error") %> prohibited this match from being saved:</h2>
-
-        <ul>
-        <% @match.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-
     <div class="field">
       <%= f.label :played_at %>
       <%= f.date_field :played_at, class: "form-control" %>
     </div>
 
     <div class="field">
-      
-      
       <%= f.fields_for :scores do |s| %>
         <% if s.object.user == current_user %>
           <%= s.label :user_id, "User" %>
@@ -53,7 +39,8 @@
       <% end %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit "Save", class: "btn btn-lg btn-primary btn-create" %>
+      <%= link_to "Cancel", root_path %>
     </div>
   <% end %>
 
